--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "paymart",
   "version": "0.0.0",
-  "private": true,
+  "description": "An e-commerce platform",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "babel": "babel",
+    "webpack": "webpack"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
@@ -20,5 +22,12 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "serve-favicon": "~2.3.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "webpack": "^2.2.1"
   }
 }
