--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-form": "^6.5.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
