--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
     "ejs": "^2.5.6",
     "express": "~4.14.1",
     "express-session": "^1.15.1",
+    "jwt-simple": "^0.5.1",
     "mongoose": "^4.8.6",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "~2.3.2"
