--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,14 @@
     "webpack": "webpack"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "^2.5.6",
     "express": "~4.14.1",
     "express-session": "^1.15.1",
+    "jsonwebtoken": "^7.3.0",
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.8.6",
     "morgan": "~1.7.0",
