--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "author": "Stanley Ye",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "history": "^4.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
