--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
+    "babel": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "history": "^4.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -24,7 +26,8 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
-    "redux-form": "^6.5.0"
+    "redux-form": "^6.5.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
