--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.6",
     "express": "~4.14.1",
     "express-session": "^1.15.1",
+    "helmet": "^3.5.0",
     "jsonwebtoken": "^7.3.0",
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.8.6",
