--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.27.3",
     "webpack": "^2.2.1"
   }
 }
